--- a/templates/Clients/FindFirm.html
+++ b/templates/Clients/FindFirm.html
@@ -169,7 +169,7 @@
                                                 <table class="table">
                                                     <tbody><tr>
                                                            
-                                                            <td>Firm ID</td>
+                                                           
                                                             <td >
                                                                 Firm ID
                                                             </td>
@@ -199,7 +199,7 @@
                                                             <td >
                                                                 {{lr.Name}}
                                                             </td>
-                                                            <td >
+                                                            <td  style="text-align:center">
                                                                 {{lr.Est}}
                                                             </td>
                                                              <td style="text-align:center">
@@ -212,7 +212,7 @@
                                                                 {{lr.Rating}}
                                                             </td>
                                                             <td >
-                                                                {{lr.Fees_range}}
+                                                                {{lr.Fees_Range}}
                                                             </td>
                                                               <!-- <td >
                                                                 {%if 'True'==lr.Status %}
