--- a/templates/Clients/FirmRequest.html
+++ b/templates/Clients/FirmRequest.html
@@ -241,7 +241,7 @@
                                                 <div class="form-group label-floating">
                                                 	                             	<label>Filing Number</label>
 
-                                                        <input class="form-control" type="number" name="FilingNo" required="" />
+                                                        <input class="form-control" type="number" name="FilingNo"  />
                                                     </div>
                                                 </div>
                                         </div>
