--- a/templates/index.html
+++ b/templates/index.html
@@ -12,14 +12,15 @@
   <!-- Google Fonts Roboto -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="static/static123/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <!-- Material Design Bootstrap -->
   <link rel="stylesheet" href="static/static123/css/mdb.min.css">
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="static/static123/css/style.css">
   <link rel='manifest' href='static/static123/manifest.json'>
 
-  <script type="module" href="static/static123/pwabuilder-sw.js"></script>
+  <script type="module" src="static/static123/pwabuilder-sw.js"></script>
 </head>
 <body>
 
@@ -29,8 +30,8 @@
     <div class="container">
 
       <!-- Brand -->
-      <a style="color: #FFC77D !important;" class="navbar-brand" href="/">
-        <strong>eCourt</strong>
+      <a style="color: #FFC77D !important;" class="navbar-brand" href="#">
+        <strong>Honour</strong>
       </a>
 
       <!-- Collapse -->
@@ -45,25 +46,24 @@
         <!-- Left -->
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
+            <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#AboutHonour">About Honour</a>
+            <a class="nav-link" href="#about" >About Honour</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#MoreOnHonour">More on Honour</a>
+            <a class="nav-link" href="#explained" >More on Honour</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#Features">Features</a>
+            <a class="nav-link" href="#features" target="_blank">Features</a>
           </li>
         </ul>
 
         <!-- Right -->
         <ul class="navbar-nav nav-flex-icons">
           <li class="nav-item">
-            <a href="/Login" class="nav-link border border-light rounded"
-              target="_blank">
-              <i class="fab fa fa-play mr-2"></i>Login
+            <a href="/Login" class="nav-link border border-light rounded">
+              <i class="fab fa fa-play mr-2"></i>Demo
             </a>
           </li>
         </ul>
@@ -121,7 +121,7 @@
     <div class="container">
 
       <!--Section: Main info-->
-      <section class="mt-5 wow fadeIn"  id="AboutHonour">
+      <section id="about" class="mt-5 wow fadeIn">
 
         <!--Grid row-->
         <div class="row">
@@ -155,9 +155,9 @@
             </p> -->
 
             <!-- CTA -->
-            <a target="_blank" href="/Registeras" class="custom-btn btn btn-indigo btn-md">Signup
+            <a href="/Registeras" class="custom-btn btn btn-indigo btn-md">Signup
             </a>
-            <a target="_blank" href="/Login" class="custom-btn btn btn-indigo btn-md">Login
+            <a thref="/Login" class="custom-btn btn btn-indigo btn-md">Login
             </a>
 
           </div>
@@ -172,7 +172,7 @@
       <hr class="my-5">
 
       <!--Section: Main features & Quick Start-->
-      <section id="MoreOnHonour">
+      <section id="explained" class="mt-5 wow fadeIn">
 
         <h3 class="h3 text-center mb-5">More on Honour</h3>
 
@@ -231,7 +231,7 @@
 
             <p class="h5 text-center mb-4">Our Logo</p>
             <div style="width: auto; height: auto; display: flex; align-items: center; justify-content: center;">
-              <img style="width: 70%; height: auto; border-radius: 20px;"src="static/static123/img/logo.png" class="img-fluid z-depth-1-half" alt="">
+              <img style="width: 70%; height: auto; border-radius: 20px;" src="static/static123/img/logo.png" class="img-fluid z-depth-1-half" alt="">
             </div>
           </div>
           <!--/Grid column-->
@@ -245,7 +245,7 @@
       <hr class="my-5">
 
       <!--Section: Not enough-->
-      <section id="Features">
+      <section id="about" class="mt-5 wow fadeIn">
 
         <h2 class="my-5 h3 text-center">Features</h2>
 
@@ -298,8 +298,9 @@
           <!--/First column-->
 
           <!--Second column-->
-          <div class="col-md-4 flex-center">
-            <img src="https://mdbootstrap.com/img/Others/screens.png" alt="MDB Magazine Template displayed on iPhone" class="z-depth-0 img-fluid">
+          <div class="col-md-4 flex-center" style="flex-direction: column;">
+            <img style="width: 60%;" src="https://i.imgur.com/6jR0O63.png" alt="MDB Magazine Template displayed on iPhone" class="z-depth-0 img-fluid">
+            <div style="height:15px">&nbsp;</div>
           </div>
           <!--/Second column-->
 
@@ -362,9 +363,9 @@
 
     <!--Call to action-->
     <div class="pt-4">
-      <a class="btn btn-outline-white" href="/Login" target="_blank" role="button">Login Now
+      <a class="btn btn-outline-white" href="/Login" role="button">Login Now
       </a>
-      <a class="btn btn-outline-white" href="/Registeras" target="_blank" role="button">Signup Now
+      <a class="btn btn-outline-white" href="/Registeras" role="button">Signup Now
       </a>
     </div>
     <!--/.Call to action-->
@@ -384,9 +385,12 @@
   <!-- jQuery -->
   <script type="text/javascript" src="static/static123/js/jquery.min.js"></script>
   <!-- Bootstrap tooltips -->
-  <script type="text/javascript" src="static/static123/js/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <!-- WOW Anim -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.2.2/web-animations.min.js"></script>
   <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="static/static123/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="static/static123/js/mdb.min.js"></script>
   <!-- Your custom scripts (optional) -->
